-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Execution
-
Fully Compatible
-
ALL
-
QE 2025-09-29
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Using a moved object
Using a moved object may lead to an unexpected/undefined behavior. An object is used after it's moved.
/src/mongo/db/ops/write_ops_exec.cpp:1553: USE_AFTER_MOVE 176519 "letParams" is moved (indicated by "std::move(letParams)").
/src/mongo/db/ops/write_ops_exec.cpp:1582: USE_AFTER_MOVE 176519 Returning while reference parameter "letParams" is in a moved state.