SERVER-110153 Remove std::move on const reference (#41563)

GitOrigin-RevId: 6834067e82e6f92767f13121149420a92633c552